// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pruebas en ProductCard debe de incrementar el contador 1`] = `
<div
  className="productCard undefined"
>
  <h1>
    Product card
  </h1>
  <h2>
    0
  </h2>
  <button
    onClick={[Function]}
  />
</div>
`;

exports[`Pruebas en ProductCard debe de mostrar el componente correctamente,pasandole el product y los children 1`] = `
<div
  className="productCard undefined"
>
  <h1>
    Product card
  </h1>
</div>
`;
